fixed about padding issue on mobile, starting to replace project  gallery with css grid

--- a/src/About.css
+++ b/src/About.css
@@ -24,8 +24,10 @@
 }
 .about-text {
   background-color:white;
-  padding: 8rem;
-  /* padding-top: 8rem; */
+  padding-top: 8rem;
+  padding-left: 15%;
+  padding-right: 15%;
+  padding-bottom: 8rem;
   min-height: 80vh;
   background-color: rgb(241, 241, 241);
   text-align: left;
